--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,54 @@
 {
-    "name": "bougette-server",
+    "name": "server",
     "version": "0.0.1",
-    "description": "The server for the bougette web app.",
-    "main": "index.js",
+    "description": "The server for bougette.",
+    "main": "build/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon index.ts",
+        "build": "tsc -p tsconfig.json",
+        "db:seed": "dotenv -e .env.local -- npx prisma db seed",
+        "db:migrate": "dotenv -e .env.local -- npx prisma migrate dev --name",
+        "db:reset": "dotenv -e .env.local -- npx prisma migrate reset"
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
     },
     "keywords": [
-        "graphql",
         "apollo",
+        "typescript",
+        "graphql",
         "prisma"
     ],
     "author": "Sandrico Provo",
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.18.6",
+        "@babel/eslint-parser": "^7.18.2",
+        "@babel/preset-react": "^7.18.6",
+        "@types/node": "^17.0.45",
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
+        "@typescript-eslint/parser": "^5.30.5",
+        "eslint": "^8.19.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^16.2.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-sandricoprovo": "^3.0.7",
+        "eslint-import-resolver-typescript": "^2.7.1",
+        "eslint-plugin-html": "^6.2.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^2.7.1",
+        "prisma": "^4.0.0",
+        "ts-node": "^10.8.2",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "@prisma/client": "^4.0.0",
+        "apollo-server": "^3.9.0",
+        "dotenv-cli": "^6.0.0",
+        "graphql": "^16.5.0"
+    }
 }
