--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "The server for bougette.",
     "main": "build/index.js",
     "scripts": {
-        "dev": "nodemon index.ts",
+        "dev": "dotenv -e .env.local -- nodemon index.ts",
         "build": "tsc -p tsconfig.json",
         "db:seed": "dotenv -e .env.local -- npx prisma db seed",
         "db:migrate": "dotenv -e .env.local -- npx prisma migrate dev --name",
@@ -46,6 +46,7 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "@graphql-tools/schema": "^8.5.0",
         "@prisma/client": "^4.0.0",
         "apollo-server": "^3.9.0",
         "dotenv-cli": "^6.0.0",
